# students.computationalscience.nl

./: CNAME  about.html  alumni.html  experiences.html  feedback.html  footer.html  index.html  menu.html  models.html  mostlikely.html  pyproject.toml  statistics.html  student.html  survey_plots_code.ipynb  test.html
.old_files/: embedding.html  empty.html  index.html
code/: models.ipynb  mostlikely.ipynb  survey_plots_code.ipynb
css/: custom.css  frame.css
data/: CLS_student_survey_answers.csv
